# azure-sphere-samples

./: .gitignore  LICENSE  README.md  workspace.code-workspace
HardwareDefinitions/mt3620_rdb/: template_appliance.json
HardwareDefinitions/mt3620_rdb/inc/hw/: template_appliance.h
ImageToBmpFunction/: .gitignore  package-lock.json  package.json  tsconfig.json
ImageToBmpFunction/ImageUploaded/: function.json  index.ts
MT3620_Grove_Shield_Library/: CMakeLists.txt  LICENSE  README.md
MT3620_Grove_Shield_Library/HAL/: GroveI2C.c  GroveI2C.h  GroveShield.c  GroveShield.h  GroveUART.c
MT3620_Grove_Shield_Library/Sensors/: Grove4DigitDisplay.c  Grove4DigitDisplay.h  GroveI2CMotorDriver.c  GroveI2CMotorDriver.h  GroveOledDisplay96x96.c  GroveOledDisplay96x96.h  GroveTempHumiSHT31.c  GroveVibrationMotor.c  GroveVibrationMotor.h
Samples/ConnectedDevices/: CMakeLists.txt  HardwareDefinitions  app_manifest.json  main.c
Samples/IotHub/: CMakeLists.txt  README.md  app_manifest.json  azure_iot_utilities.h  exit.h  gpio.c  gpio.h  led.c  led.h  main.c  parson.h  sleep.h  utils.c  utils.h
Samples/IotHub/HardwareDefinitions/mt3620_rdb/: template_appliance.json
Samples/IotHub/HardwareDefinitions/mt3620_rdb/inc/hw/: template_appliance.h
Samples/IotHubD2D/: .gitignore  CMakeLists.txt  README.md  app_manifest.json  device_twin.c  device_twin.h  main.c  utils.c  utils.h
Samples/IotHubD2D/azsphere-sample-iothubd2d/: package-lock.json  package.json
Samples/IotHubD2D/azsphere-sample-iothubd2d/IoTHubDeviceConnectionEvents/: function.json  index.ts
Samples/MultiThreading/: CMakeLists.txt  README.md  app_manifest.json  gpio.c  gpio.h  i2cScanner.c  i2cScanner.h  led.c  led.h  logo.h  main.c  motorDriver.c  motorDriver.h  state.c  state.h  vibrationMotor.c  vibrationMotor.h
Samples/MultiThreading/HardwareDefinitions/mt3620_rdb/: template_appliance.json
Samples/MultiThreading/HardwareDefinitions/mt3620_rdb/inc/hw/: template_appliance.h
Samples/TemperatureMonitor/: CMakeLists.txt  README.adoc  app_manifest.json  config.h  main.c  util.c  util.h
Samples/TemperatureMonitor/HardwareDefinitions/mt3620_rdb/: template_appliance.json
Samples/TemperatureMonitor/HardwareDefinitions/mt3620_rdb/inc/hw/: template_appliance.h
